Fix NTP faketoolbar vertical alignment

The faketoolbar on the NTP is slightly shifted down.
This CL fixes it by removing the 8pt padding on top of the header.

Bug: 752910
Change-Id: I976f8098df3f6bc7f3746e4ca7f01d63ed5c0db5
Reviewed-on: https://chromium-review.googlesource.com/603613
Reviewed-by: Elodie Banel <lod@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492556}
Former-commit-id: 034f09fb84756039a913e27ceba7556ad8ffb891